# FarishEngine

./: .gitmodules  CMakeLists.txt  README.md
FarishEngineCore/: CMakeLists.txt
FarishEngineCore/includes/FarishEngineCore/: Camera.h  Input.h  UIModule.h  Utils.h  isometricMap.h  test.h  tile.h
FarishEngineCore/src/FarishEngineCore/: Camera.cpp  Input.cpp  UIModule.cpp  Utils.cpp  isometricMap.cpp  test.cpp
FarishEngineEditor/: CMakeLists.txt
FarishEngineEditor/src/: main.cpp
saveMap/: test1  test2
